--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -2,9 +2,7 @@
 <head>
 <title>Chapter 10</title>
 <link rel="stylesheet" href="lab7.css">
-<script>
-</script>      
-</head>    
+    <script src="jquery-3.4.1.min.js"></script></head>
 <body class="tiled">
 <header>
     <h1>Art Filters</h1>
@@ -18,7 +16,7 @@
            <p><label>Hue Rotate: </label><input type="range" id="sliderHue" min="0" max="360" value="0" class="sliders" /> <span id="numHue">0</span>deg</p>
            <p><label>Grayscale: </label><input type="range" id="sliderGray" min="0" max="100" value="0" class="sliders"/> <span id="numGray">0</span>%</p>
            <p><label>Blur: </label><input type="range" id="sliderBlur" min="0" max="10" value="0" class="sliders" /> <span id="numBlur">0</span>px</p>
-           <p><button id="resetFilters">Reset</button> </p>
+           <p><input type="button" id="resetFilters" value="Reset"></p>
         </form>    
     </div>
     <figure id="imgManipulated">
@@ -31,13 +29,99 @@
     <div id="thumbBox">
         <div><img src="images/small/painting1.jpg"  alt="Still Life with Flowers in a Glass Vase" title="Jan Davidsz. de Heem, 1650 - 1683"/></div>
         <div><img src="images/small/painting2.jpg"  alt="Portrait of Alida Christina Assink" title="Jan Adam Kruseman, 1833"/></div>
-        <div><img src="images/small/painting3.jpg"  alt="Self-portrait" title="Vincent van Gogh, 1887"/></div>
+        <!--<div><img src="images/small/painting3.jpg"  alt="Self-portrait" title="Vincent van Gogh, 1887"/></div>-->
         <div><img src="images/small/painting4.jpg"  alt="William II, Prince of Orange, and his Bride, Mary Stuart" title="Anthony van Dyck, 1641"/></div>
         <div><img src="images/small/painting5.jpg"  alt="Milkmaid" title="Johannes Vermeer, c. 1660"/></div>
     </div>
 </main>
 <script>
+    $(document).ready(function(){
+        var $thumbnails=$("#thumbBox img");
+        var $imgManipulated=$("#imgManipulated img");
+        var $infoManipulated=$("#imgManipulated figcaption");
+        var $sliders=$("#sliderBox input");
+        var $resetBtn=$("#resetFilters");
+        var $filterCss="";
+        var $filterValues={
+            "opacity":"100%",
+            "saturate":"100%",
+            "brightness":"100%",
+            "hue-rotate":"0deg",
+            "grayscale":"0%",
+            "blur":"0px"
+        };
 
+        $thumbnails.each(function ()//展示图切换
+        {
+            $(this).bind("click",clickHandler);
+        });
+        function clickHandler(e)
+        {
+            var $target=$(e.target);
+            var $newSrc=$target.attr("src").replace("small","medium");//生成新大图地址
+            ($imgManipulated.attr("src",$newSrc));//大图地址替换
+            var $newAlt=$target.attr("alt");
+            var $newTitle=$target.attr("title");
+            $infoManipulated.html("<em>"+$newTitle+"</em>"+"<br>"+$newAlt);
+        }
+        $sliders.each(function ()//滑块
+        {
+            $(this).bind("change",slideHandler);
+        });
+        function slideHandler(e)//滑块事件处理器
+        {
+            var $target=$(e.target);//获取事件对象
+            $target.next().text($target.val());
+            var $cssCategory=($target.next().attr("id").substring(3));//各span的id
+            switch($cssCategory){
+                case "Opacity":
+                    $filterValues["opacity"]=$target.val()+"%";
+                    break;
+                case "Saturation":
+                    $filterValues["saturate"]=$target.val()+"%";
+                    break;
+                case "Brightness":
+                    $filterValues["brightness"]=$target.val()+"%";
+                    break;
+                case "Hue":
+                    $filterValues["hue-rotate"]=$target.val()+"deg";
+                    break;
+                case "Gray":
+                    $filterValues["grayscale"]=$target.val()+"%";
+                    break;
+                case "Blur":
+                    $filterValues["blur"]=$target.val()+"px";
+                    break;
+            }
+            $.each($filterValues,function (key,value)
+            {
+                $filterCss+=key+"("+value+")"+" ";
+            });
+            alert($filterCss);
+            $imgManipulated.css("filter",$filterCss);
+            $imgManipulated.css("-webkit-filter",$filterCss);
+            $filterCss="";
+        }
+        $resetBtn.each(function ()//reset按钮
+        {
+            $(this).bind("click",resetHandler);
+        });
+        function resetHandler(e)
+        {
+            $imgManipulated.css("filter","none");
+            $imgManipulated.css("-webkit-filter","none");
+            ($sliders.eq(0)).val(100);
+            ($sliders.eq(1)).val(100);
+            ($sliders.eq(2)).val(100);
+            ($sliders.eq(3)).val(0);
+            ($sliders.eq(4)).val(0);
+            ($sliders.eq(5)).val(0);
+            $.each($sliders,function ()
+            {
+                $(this).next().text($(this).val());
+            })
+        }
+    });
 </script>    
 </body>   
 </html>
